# ForensicArtifacts2DFIR-orc-config

./: README.md  create_dfir_orc_config.py
DFIR-ORC-Config/: AllUsersAppDataEnvironmentVariable.xml  AllUsersProfileEnvironmentVariable.xml  ApacheAccessLogs.xml  ApacheErrorLogs.xml  BashShellConfigurationFile.xml  BashShellHistoryFile.xml  Bit9LocalCache.xml  BourneShellHistoryFile.xml  CShellConfigurationFile.xml  ChromeExtensionRegistryKeys.xml  ChromeFileSystem.xml  ChromeIndexedDB.xml  ChromeLocalStorage.xml  ChromePlatformNotifications.xml  ChromePreferences.xml  ChromeSessionStorage.xml  ChromiumBasedBrowsersCache.xml  ChromiumBasedBrowsersCookiesDatabaseFile.xml  ChromiumBasedBrowsersExtensionActivitySQLiteDatabaseFile.xml  ChromiumBasedBrowsersExtensions.xml  ChromiumBasedBrowsersFaviconsDatabaseFile.xml  ChromiumBasedBrowsersHistoryDatabaseFile.xml  CrowdstrikeAgentID.xml  (+300 more)
ForensicArtifacts_to_convert/artifacts-main/: pyproject.toml  tox.ini
ForensicArtifacts_to_convert/artifacts-main/artifacts/: __init__.py  artifact.py  definitions.py  errors.py  reader.py  registry.py  source_type.py  writer.py
ForensicArtifacts_to_convert/artifacts-main/artifacts/data/: unix_common.yaml
ForensicArtifacts_to_convert/artifacts-main/artifacts/scripts/: stats.py  validator.py
ForensicArtifacts_to_convert/artifacts-main/docs/: conf.py
ForensicArtifacts_to_convert/artifacts-main/tests/: reader_test.py  registry_test.py  source_type_test.py  test_lib.py  validator_test.py  writer_test.py
ForensicArtifacts_to_convert/artifacts-main/utils/: update_release.sh
(+1 files in other folders)
