[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifacts"
version = "20260516"
description = "ForensicArtifacts.com Artifact Repository"
maintainers = [
    { name = "Forensic artifacts", email = "forensicartifacts@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
]

[project.scripts]
stats = "artifacts.scripts.stats:Main"
validator = "artifacts.scripts.validator:Main"

[project.urls]
Documentation = "https://artifacts.readthedocs.io/en/latest"
Homepage = "https://github.com/ForensicArtifacts/artifacts"
Repository = "https://github.com/ForensicArtifacts/artifacts"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.docformatter]
black = true
non-cap = ["str:"]
non-strict = true

[tool.setuptools]
package-dir = {"artifacts" = "artifacts"}

[tool.setuptools.package-data]
artifacts = [
    "data/*.yaml",
]
